# ai-chat-app

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/hooks/: guard.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  scratch.py  try_openai.py
backend/alembic/: env.py
backend/alembic/versions/: d623ca539b0f_create_conversations_and_messages.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  openai_client.py  schemas.py
backend/app/routers/: __init__.py  chat.py  conversations.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  ChatWindow.tsx  api.ts  index.css
frontend/src/components/: ChatHeader.tsx  Composer.tsx  EmptyState.tsx  MessageItem.tsx  MessageList.tsx  Sidebar.tsx  ThreadItem.tsx  ThreadList.tsx  TypingIndicator.tsx
frontend/src/hooks/: useChat.ts  useConversations.ts
